[gd_scene load_steps=8 format=3 uid="uid://0m7lcraq81e5"]

[ext_resource type="Script" path="res://crafting/blender_on.gd" id="1_dgmqv"]
[ext_resource type="Texture2D" uid="uid://ip7gotor602y" path="res://crafting/interiors/guava blender.PNG" id="2_0due7"]
[ext_resource type="Texture2D" uid="uid://px42gxu0cnj4" path="res://crafting/interiors/empty blender.PNG" id="2_rwp1l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iket1"]
atlas = ExtResource("2_rwp1l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd3ob"]
atlas = ExtResource("2_0due7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rjb6s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iket1")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd3ob")
}],
"loop": true,
"name": &"guava",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryqv6"]
size = Vector2(47, 53)

[node name="blender" type="Node2D"]
script = ExtResource("1_dgmqv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(23, -11)
scale = Vector2(3.75, 3.25)
sprite_frames = SubResource("SpriteFrames_rjb6s")
animation = &"empty"

[node name="blender" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blender"]
position = Vector2(19.5, -11.5)
shape = SubResource("RectangleShape2D_ryqv6")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="blender" to="." method="_on_blender_area_entered"]
[connection signal="input_event" from="blender" to="." method="_on_blender_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
